--- a/locales/wcg-bot_de-DE.json
+++ b/locales/wcg-bot_de-DE.json
@@ -1,28 +1,30 @@
 {
-	"newAccount": "Bitte erstellen Sie ein 'World Community Grid' Konto oder verändern Sie ein existierendes mit folgenden Namen: {{username}}",
+	"newAccount": "Bitte erstellen Sie ein World Community Grid Konto auf https://join.worldcommunitygrid.org?teamId={{teamId}}, oder modifizieren Sie ein bereits vorhandenes mit folgendem Benutzernamen: {{username}} und stellen Sie sicher, dass Sie die 'Meine Daten anzeigen' Option auf Ihrer Profilseite ausgewählt haben. Eine Schritt für Schritt Anleitung können Sie auf folgendem Wiki einsehen: https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "Sie können ihn später ändern, wenn Sie wünschen. Wenn Sie fertig sind, klicken Sie auf den Link unten.",
 	"checkAccountButton": "Mein Konto prüfen",
 	"accountLinked": "Ihr WCG Konto wurde erfolgreich verbunden.",
-	"insertAddress": "Bitte geben Sie die Adresse an, an die ausgezahlt werden soll (Klicken Sie auf '...' Meine Adresse einfügen.)",
+	"insertAddress": "Bitte fügen Sie die Adresse ein, die Sie als Auszahlungs-Adresse nutzen möchten (drücken Sie den '...' Button und klicken dann auf 'Meine Adresse einfügen')",
 	"addressLinked": "Glückwunsch!",
-	"setupComplete": "Einrichtung beendet! Belohnungen entsprechend Ihrem Beitrag werden gelegentlich an die Auszahlungsadresse unter dem Konto {{accountName}} (ID: {{accountID}}) ausgezahlt.",
+	"setupComplete": "Einrichtung beendet! Belohnungen entsprechend Ihrem Beitrag werden regelmäßig an die Auszahlungsadresse des Kontos {{accountName}} (ID: {{accountID}}) ausgezahlt.",
 	"changeLinkedButton": "Ändere verknüpftes WCG Konto",
 	"changePayoutButton": "Auszahlungsadresse ändern",
-	"changeUsernameButton": "Kontoname ändern",
-	"enterNewUsername": "Bitte geben Sie den neuen Namen für Ihre WCG Konto ID ein {{accountID}}",
+	"changeUsernameButton": "WCG Benutzername ändern",
+	"enterNewUsername": "Bitte geben Sie den neuen Benutzernamen für Ihre WCG-Konto-ID ein {{accountID}}",
 	"cancelButton": "Abbrechen",
-	"usernameValidated": "Neuer name validiert.",
+	"usernameValidated": "Neuer Benutzername bestätigt.",
 	"okButton": "Ok",
-	"accountCheckFailed": "Kontoverifizierung fehlgeschlagen. Bitte verwenden Sie {{accountName}} als Kontonamen und versuchen Sie es bitte erneut.",
-	"scoreFetchingFailed": "WCG Punktestand konnte für die laufende Verteilung leider nicht abgerufen werden. Bitte stellen Sie sicher, dass folgendes Ihr Kontoname ist: {{accountName}}",
-	"payoutForCurrentWork": "Sie haben eine Auszahlung in Höhe von {{amountByte}}GB und {{amountAsset}} {{labelAsset}} für Ihren Beitrag erhalten.",
+	"accountCheckFailed": "Kontoprüfung fehlgeschlagen. Bitte stellen Sie sicher, dass Sie {{accountName}} als Benutzernamen eingestellt haben und dass die 'Meine Daten anzeigen' Option auf Ihrer Profilseite ausgewählt ist.",
+	"scoreFetchingFailed": "Nicht in der Lage, Ihre WCG Punktzahl für die derzeitige Verteilung zu erhalten. Bitte stellen Sie sicher, dass Ihr Benutzername {{accountName}} ist und dass die 'Meine Daten anzeigen' Option auf Ihrer Pofilseite ausgewählt ist.",
+	"payoutForCurrentWork": "Eine Auszahlung von {{amountByte}} GB und {{amountAsset}} {{labelAsset}} wurde getätigt, um Ihre Beteiligung zu belohnen.",
 	"errorOccurred": "Es ist ein unvorhergesehener Fehler aufgetreten. Admin wurde benachrichtigt. Bitte versuchen Sie es in ein paar Stunden erneut.",
 	"seemsUnresponsive": "Fehler, World Community Grid scheint nicht zu reagiert. Versuchen Sie später erneut.",
-	"usernameMismatch": "Der Name stimmt nicht mit dem Namen Ihres WCG-Kontos überein: {{accountID}}",
+	"usernameMismatch": "Dieser Benutzername stimmt nicht mit der WCG-Konto-ID {{accountID}} überein",
 	"notValidAddress": "Dies ist keine valide Adresse.",
-	"fixUsernameMismatch": "Der Kontoname {{accountName}} stimmt nicht mit der ID {{accountID}} überein. Sie werden keine Auszahlung erhalten, bis dieses Problem behoben ist oder Sie ein neues WCG Konto verbinden.",
+	"fixUsernameMismatch": "Der Benutzername: {{accountName}} stimmt nicht mit der ID {{accountID}} überein. Sie erhalten keine Auszahlungen, bis Sie das Problem behoben haben oder Ihr neues WCG-Konto verlinken.",
 	"visitWiki": "Um mehr zu erfahren, besuchen Sie bitte unser Wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Erneut versuchen",
-	"anotherUsernameButton": "Auf ein anderes Konto wechseln",
-	"payoutForPreviousWork": "Eine Auszahlung über {{amountByte}}GB und {{amountAsset}} {{labelAsset}} wurde getätigt um Ihren Beitrag zum World Community Grid zu belohnen."
+	"anotherUsernameButton": "Auf einen anderen Benutzernamen wechseln",
+	"payoutForPreviousWork": "Eine Auszahlung von {{amountByte}} GB und {{amountAsset}} {{labelAsset}} wurde getätigt, um Ihre vorherige Beteiligung am World Community Grid zu belohnen.",
+	"userInTeam": "Als Teammitglied von byteball.org erhalten Sie einen {{bonus}}% Bonus.",
+	"userNotInTeam": "Sie können dem byteball.org-Team beitreten und einen {{bonus}}% Bonus erhalten. Besuchen Sie https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}}, um beizutreten."
 }
