--- a/locales/wcg-bot_uk-UA.json
+++ b/locales/wcg-bot_uk-UA.json
@@ -1,5 +1,5 @@
 {
-	"newAccount": "Будь ласка, створіть обліковий запис World Community Grid на https://www.worldcommunitygrid.org або змініть існуючий з цього користувача: {{username}}",
+	"newAccount": "Будь ласка створіть обліковий запис World Community Grid на https://join.worldcommunitygrid.org?teamId={{teamId}} або змініть існуючий на це імя:{{username}} і переконайтесь що ви вибрали параметр 'Показати мої дані' на сторінці профілю. Покрокова інструкція доступна на вікі сторінці https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "Ви можете змінити це пізніше, якщо забажаєте. Для закінчення натисніть на посилання нижче.",
 	"checkAccountButton": "Перевірити мій обліковий запис",
 	"accountLinked": "Ваш WCG обліковий запис успішно підв'язано.",
@@ -8,21 +8,23 @@
 	"setupComplete": "Налаштування завершено! Періодично, нагорода пропорційна до вашого внеску в проект World Community Grid під обліковим записом {{accountName}} (ID: {{accountID}}) буде надіслана на ваш рахунок для виплат.",
 	"changeLinkedButton": "Змінити підв'язаний обліковий запис WCG",
 	"changePayoutButton": "Змінити адресу для виплат",
-	"changeUsernameButton": "Змінити ім'я облікового запису",
-	"enterNewUsername": "Будь ласка, введіть нове ім'я для вашого WCG облікового запису з id {{accountID}}",
+	"changeUsernameButton": "Змінити Ім'я користувача WCG",
+	"enterNewUsername": "Будь ласка, введіть нове ім'я для вашого облікового запису WCG з id {{accountID}}",
 	"cancelButton": "скасувати",
 	"usernameValidated": "Нове ім'я перевірено.",
 	"okButton": "добре",
-	"accountCheckFailed": "Перевірку облікового запису не пройдено. Переконайтесь, що ви вказали {{accountName}} як ім'я облікового запису і спробуйте знову.",
-	"scoreFetchingFailed": "Не в змозі отримати WCG результат для поточного розподілу. Переконайтеся, що ім'я облікового запису: {{accountName}}",
-	"payoutForCurrentWork": "Виплати на {{amountByte}}ГБ і {{amountAsset}} {{labelAsset}} було зроблено, як подяка за ваш внеску.",
+	"accountCheckFailed": "Перевірку облікового запису не пройдено. Будь ласка, переконайтеся, що встановлено {{accountName}} як ім'я користувача, і що ви вибрали параметр 'Показати мої дані' на сторінці профілю.",
+	"scoreFetchingFailed": "Не в змозі отримати WCG бал поточного розподілу. Будь ласка переконайтеся, що ваше ім'я користувача: {{accountName}}, і що ви вибрали параметр 'Показати мої дані' на сторінці профілю.",
+	"payoutForCurrentWork": "Виплати {{amountByte}} GB і {{amountAsset}} {{labelAsset}} було зроблено, як подяка за ваш внесок.",
 	"errorOccurred": "Сталася неочікувана помилка. Адміністратор повідомлений про це. Будь ласка, спробуйте знову за кілька годин.",
 	"seemsUnresponsive": "Помилка, World Community Grid не відповідає. Спробуйте ще раз пізніше.",
-	"usernameMismatch": "Це ім'я не відповідає WCG обліковому запису з id {{accountID}}",
+	"usernameMismatch": "Цей обліковий запис не відповідає обліковому запису WCG з ID {{accountID}}",
 	"notValidAddress": "Це не коректний адрес.",
 	"fixUsernameMismatch": "Ім'я облікового запису: {{accountName}} не відповідає ID {{accountID}}. Ви не отримаєте виплат, доки ви не виправити цю проблему або не підв'яжете його з новим обліковим записом WCG.",
 	"visitWiki": "Для додаткової інформації, відвідайте будь ласка наш вікі-сайт: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Спробувати знову",
 	"anotherUsernameButton": "Змінити обліковий запис на інший",
-	"payoutForPreviousWork": "Виплати на {{amountByte}}ГБ і {{amountAsset}} {{labelAsset}} було зроблено, як подяка за ваш попередній внесок до World Community Grid."
+	"payoutForPreviousWork": "Виплати {{amountByte}} GB і {{amountAsset}} {{labelAsset}} було зроблено, як подяка за ваш попередній внесок до World Community Grid.",
+	"userInTeam": "Як член команди byteball.org ви отримаєте бонус {{bonus}}%.",
+	"userNotInTeam": "Ви можете приєднатися до команди byteball.org і отримати бонус {{bonus}}%. Перейдіть сюди https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} щоб приєднатися до нас."
 }
